fix: get rooms sort
